<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profile">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/profile"
        android:orientation="vertical"
        tools:context="com.varun.project.Profile">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text="Hi!"
            android:textColor="@android:color/white"
            android:textSize="45sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="We'd like to know you better to give you the best app experience!"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/profileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="18dp"
            android:paddingTop="18dp"
            android:text="Gender:"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="18dp">

                <RadioButton
                    android:id="@+id/sexMale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@android:color/white"
                    android:padding="10dp"
                    android:text="Male"
                    android:textColor="@android:color/white"
                    android:textSize="17sp" />


                <RadioButton
                    android:id="@+id/sexFemale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@android:color/white"
                    android:padding="10dp"
                    android:text="Female"
                    android:textColor="@android:color/white"
                    android:textSize="17sp" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/profileCET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="MH-CET Marks"
                android:inputType="number"
                android:padding="15dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <EditText
                android:id="@+id/profileHSC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="12th %"
                android:inputType="numberDecimal"
                android:padding="15dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="18dp"
            android:paddingTop="18dp"
            android:text="Select one:"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


        <Spinner
            android:id="@+id/spinnerProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/profile"
            android:padding="18dp" />

        <Button
            android:id="@+id/submit"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:padding="25dp"
            android:text="Submit"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

    </LinearLayout>
</ScrollView>