...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/sinhgadlogo" />


    <ListView
        android:id="@+id/menuList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>

